# kernel

./: Cargo.toml  Makefile  README.md
src/: lib.rs  syslog.rs
src/arch/: mod.rs  vga.rs
src/arch/x86_64/: boot.asm  idt.rs  init.rs  linker.ld  mod.rs
