[package]
name = "my_os"
version = "1.0.0"
authors = ["ag_dubs"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
x86 = "0.8.0"
time = { default-features = false, version = "0.1" }
log = { default-features = false, version = "0.3.6" }
spin = "0.4.4"
multiboot2 = "0.3.0"
#alloc-no-stdlib = { version = "1.2.0", features = ["no-stdlib"] }
linked_list_allocator = "0.2.2"
